crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__backspace_then_render.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
────────────────────────────────────────
hel
