crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__cursor_at_start.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
────────────────────────────────────────
hello world
