crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__empty_editor.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
────────────────────────────────────────
