crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__insert_text_then_render.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
────────────────────────────────────────
hello
