crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__insert_then_esc_to_normal.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
 NORMAL ────────────────────────────────
hello
