crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__lifecycle_1_after_typing.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: step1
---
────────────────────────────────────────
hello world
