crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__lifecycle_2_normal_mode.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: step2
---
 NORMAL ────────────────────────────────
hello world
