crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__lifecycle_3_after_h.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: step3
---
 NORMAL ────────────────────────────────
hello world
