crates/ox-cli/src/snapshots/ox__editor_snapshots__tests__multiline_content.snap
---
source: crates/ox-cli/src/editor_snapshots.rs
expression: rendered
---
────────────────────────────────────────
line one
line two
line three
